--- a/code.css
+++ b/code.css
@@ -800,7 +800,7 @@ body:not(.search-page) .menuarea {
 	font-size: 12px;
 	font-weight: bold;
 	text-transform: capitalize;
-	margin-top: 20px !important;
+	margin-top: 15px !important;
  }
 
 .comments-page .menuarea {
@@ -1095,7 +1095,7 @@ body:not(.search-page) .menuarea .spacer {
 	position: relative;
 	z-index: 1;
 	margin-left: 20px;
-	margin-top: -40px;
+	margin-top: 20px;
 	margin-bottom: 20px;
 	padding: 5px !important;
 	font-size: 9px;
@@ -2101,7 +2101,7 @@ body:not(.search-page) #search input[type=text] {
 
 .commentarea {
 	padding: 0 10px 10px;
-	margin-top: 70px;
+	margin-top: 30px;
 }
 
 .users-online {color: #535353;}
@@ -3458,6 +3458,10 @@ html[lang="nm"] .side .md h3 a[href*="http://nm.reddit.com/r/pokemonexchange"] {
 	display: none!important;
 }
 
+.content .spacer {
+	margin-bottom: 0px !important;
+}
+
 /*——————————————————————————————————————————————
              SUBREDDIT COLOR SCHEME
 For aesthetic purposes, please keep everything
@@ -3784,6 +3788,7 @@ a[href^="#pk-"], a[href^="#bs-"], a[href^="#ref-"] {
 /*POKEMON FLAIRS*/
 
 	/*willster191*/
+	
 	.flair-christmaslatios::before {
 		background-position: 0px 0px;
 		background-image: url(%%modsprites%%);
@@ -3794,11 +3799,39 @@ a[href^="#pk-"], a[href^="#bs-"], a[href^="#ref-"] {
 		background-position: 0px -50px;
 		background-image: url(%%modsprites%%);
 	}
+	
+	.flair-shinymimikyu::before {
+		background-position: 0px -100px;
+		height: 28px;
+		background-image: url(%%modsprites%%);
+	}
+	
+	.flair-shinymegadiancie::before {
+		background-position: 0px -150px;
+		background-image: url(%%modsprites%%)
+	}
 
 	/*Vovvy (robertoxmed)*/
 
 	.flair-tapufini::before {
 		background-position: -50px 0px;
+		background-image: url(%%modsprites%%);
+	}
+
+	.flair-alolanpersian::before{
+		background-position: -50px -50px;
+		background-image: url(%%modsprites%%);
+	}
+
+	.flair-scrafty::before {
+		background-position: -50px -100px;
+		background-image: url(%%modsprites%%);
+	}
+	
+	.flair-megagengar::before {
+		background-position: -50px -150px;
+		width: 40px;
+		height: 40px;
 		background-image: url(%%modsprites%%);
 	}
 
@@ -3820,12 +3853,24 @@ a[href^="#pk-"], a[href^="#bs-"], a[href^="#ref-"] {
 		background-position: -150px -50px;
 		background-image: url(%%modsprites%%);
 	}
+	
+	.flair-shinypumpkaboo::before {
+		background-position: -150px -100px;
+		background-image: url(%%modsprites%%);
+	}
 
 	/*Jay (Upper90715)*/
 
 	.flair-shedinja::before {
 		background-position: -200px 0px;
 		background-image: url(%%modsprites%%);
+	}
+
+	/* KookyKracks */
+	.flair-haunter::before {
+		background-position: -400px 0px;
+		background-image: url(%%modsprites%%);
+		width: 36px;
 	}
 
 	/*Bots*/
@@ -4234,6 +4279,10 @@ div.thing.reported, .res-nightmode .commentarea .comment .comment .comment .comm
 
 .res-nightmode .comment.spam>.child,.res-nightmode .message.spam>.child {
 	background-color: #6A1E1E!important;
+}
+
+.views {
+	padding: 0px 100px!important;
 }
 
 /*
