--- a/code.css
+++ b/code.css
@@ -1124,12 +1124,12 @@ body.comments-page .sitetable {
 
 .commentarea > .usertext {
 	background-color: #F8F8F8;
-	border-radius: 0px 0px 2px 2px;
+	border-radius: 2px 2px 2px 2px!important;
 	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.08);
 	overflow: visible;
-	padding-top: 165px;
+	padding-top: 65px;
 	padding-left: 29px;
-	margin-top: -160px;
+	margin-top: -62px;
 	margin-left: -10px;
 	margin-right: -10px;
  }
@@ -1137,9 +1137,8 @@ body.comments-page .sitetable {
 .res .commentarea > .usertext {
 	position: relative;
 	top: -110px;
-	margin-bottom: -90px;
-	margin-top: -160px;
-	padding-top: 136px;
+	margin-bottom: -98px;
+	margin-top: 62px;
 	clear: left;
  }
 
@@ -3795,6 +3794,17 @@ a[href^="#pk-"], a[href^="#bs-"], a[href^="#ref-"] {
 		background-image: url(%%modsprites%%);
 	}
 
+	.flair-shinymimikyu::before {
+		background-position: 0px -100px;
+		height: 28px;
+		background-image: url(%%modsprites%%);
+	}
+
+	.flair-shinymegadiancie::before {
+		background-position: 0px -150px;
+		background-image: url(%%modsprites%%);
+	}
+
 	/*Vovvy (robertoxmed)*/
 
 	.flair-tapufini::before {
@@ -3833,6 +3843,11 @@ a[href^="#pk-"], a[href^="#bs-"], a[href^="#ref-"] {
 	}
 
 	.flair-stufful::before {
+		background-position: -150px -50px;
+		background-image: url(%%modsprites%%);
+	}
+
+	.flair-shinypumpkaboo::before {
 		background-position: -150px -50px;
 		background-image: url(%%modsprites%%);
 	}
@@ -4106,7 +4121,7 @@ html[lang="nm"] .nsfw-stamp acronym:after,.res-nightmode .nsfw-stamp acronym:aft
 	color: rgb(130, 130, 130);
 }
 
-.res-nightmode .commentarea, .res-nightmode .comments-page .link, .res-nightmode .listing-page div.content, .res-nightmode .submit-page div.content, .res-nightmode .subreddit-rules-page, .res-nightmode .wiki-page div.content {
+.res-nightmode .comments-page .link, .res-nightmode .listing-page div.content, .res-nightmode .submit-page div.content, .res-nightmode .subreddit-rules-page, .res-nightmode .wiki-page div.content {
 	background-color: #333;
 	box-shadow: 0 1px 3px 1px #000;
 }
@@ -4273,6 +4288,8 @@ div.thing.reported, .res-nightmode .commentarea .comment .comment .comment .comm
 .views {
 	padding: 0px 100px!important;
 }
+
+content .spacer { margin-bottom: 0px !important}
 
 /*
 Credits
