--- a/code.css
+++ b/code.css
@@ -3782,49 +3782,45 @@ a[href^="#pk-"], a[href^="#bs-"], a[href^="#ref-"] {
 
 /*POKEMON FLAIRS*/
 
+	.flair-mods::before {
+		background-image: url(%%modsprites%%);
+	}
+
 	/*willster191*/
 	.flair-christmaslatios::before {
 		background-position: 0px 0px;
-		background-image: url(%%modsprites%%);
 		width: 36px;
 	}
 
 	.flair-tapukoko::before {
 		background-position: 0px -50px;
-		background-image: url(%%modsprites%%);
 	}
 
 	.flair-shinymimikyu::before {
 		background-position: 0px -100px;
 		height: 28px;
-		background-image: url(%%modsprites%%);
 	}
 
 	.flair-shinymegadiancie::before {
 		background-position: 0px -150px;
-		background-image: url(%%modsprites%%);
 	}
 
 	/*Vovvy (robertoxmed)*/
 
 	.flair-tapufini::before {
 		background-position: -50px 0px;
-		background-image: url(%%modsprites%%);
 	}
 
 	.flair-alolanpersian::before{
 		background-position: -50px -50px;
-		background-image: url(%%modsprites%%);
 	}
 
 	.flair-scrafty::before {
 		background-position: -50px -100px;
-		background-image: url(%%modsprites%%);
 	}
 
 	.flair-manenecrozma::before {
 		background-position: -52px -200px;
-		background-image: url(%%modsprites%%);
 		width: 36px;
 	}
 
@@ -3832,48 +3828,40 @@ a[href^="#pk-"], a[href^="#bs-"], a[href^="#ref-"] {
 
 	.flair-marowak::before {
 		background-position: -100px 0px;
-		background-image: url(%%modsprites%%);
 	}
 
 	/*Anna (froakiedokie)*/
 
 	.flair-litten::before {
 		background-position: -150px 0px;
-		background-image: url(%%modsprites%%);
 	}
 
 	.flair-stufful::before {
 		background-position: -150px -50px;
-		background-image: url(%%modsprites%%);
 	}
 
 	.flair-shinypumpkaboo::before {
 		background-position: -150px -50px;
-		background-image: url(%%modsprites%%);
 	}
 
 	.flair-shinynihilego::before {
 		background-position: -150px -150px;
-		background-image: url(%%modsprites%%);
 	}
 
 	/*Jay (Upper90715)*/
 
 	.flair-shedinja::before {
 		background-position: -200px 0px;
-		background-image: url(%%modsprites%%);
 	}
 
 	/* KookyKracks */
 	.flair-haunter::before {
 		background-position: -400px 0px;
-		background-image: url(%%modsprites%%);
 		width: 36px;
 	}
 
 	.flair-shinypoipole::before {
 		background-position: -404px -50px;
-		background-image: url(%%modsprites%%);
 	}
 
 
