Shny Sandygast flair
Added shiny sandygast flair for ValarEnki

--- a/code.css
+++ b/code.css
@@ -3864,6 +3864,12 @@ a[href^="#pk-"], a[href^="#bs-"], a[href^="#ref-"] {
 		background-position: -404px -50px;
 	}
 
+	/*ValarEnki*/
+
+	.flair-shinysandygast::before {
+		background-position: -100px -50px;
+	}
+
 
 	/*Bots*/
 
